<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="#E5E5E5">

        <EditText
            android:id="@+id/et_ID"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="146dp"
            android:background="@drawable/edittext"
            android:ems="10"
            android:hint="@string/ID"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_pass"
            android:layout_width="330dp"
            android:layout_height="48dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="253dp"
            android:background="@drawable/edittext"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPersonName"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="403dp"
            android:background="@drawable/edittext"
            android:ems="10"
            android:hint="@string/Nickname"
            android:inputType="textPersonName"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="500dp"
            android:background="@drawable/edittext"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/et"
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:layout_marginLeft="310dp"
            android:layout_marginTop="260dp"
            android:background="@drawable/pass_icon"
            android:color="#FFFFFF" />

        <Button
            android:id="@+id/send_code"
            android:layout_width="89dp"
            android:layout_height="45dp"
            android:layout_marginLeft="285dp"
            android:layout_marginTop="500dp"
            android:text="@string/rec"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/validateButton"
            android:layout_width="89dp"
            android:layout_height="45dp"
            android:layout_marginLeft="285dp"
            android:layout_marginTop="403dp"
            android:text="@string/ck_pass"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="42dp"
            android:layout_height="26dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="480dp"
            android:text="@string/email_mail"
            android:textColor="#000000"
            android:textSize="15dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="69dp"
            android:layout_height="29dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="230dp"
            android:text="@string/password"
            android:textColor="#000000"
            android:textSize="15dp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/ck_code"
            android:layout_width="330dp"
            android:layout_height="48dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="566dp"
            android:background="@drawable/edittext"
            android:ems="10"
            android:hint="@string/check"
            android:inputType="textPersonName"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="42dp"
            android:layout_height="20dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="383dp"
            android:text="@string/Nickname"
            android:textColor="#000000"
            android:textSize="15dp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/validateButton2"
            android:layout_width="89dp"
            android:layout_height="45dp"
            android:layout_marginLeft="285dp"
            android:layout_marginTop="146dp"
            android:text="@string/ck_pass"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/ck_pass"
            android:layout_width="330dp"
            android:layout_height="48dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="312dp"
            android:background="@drawable/edittext"
            android:ems="10"
            android:hint="@string/ck_pass"
            android:inputType="textPersonName"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="69dp"
            android:layout_height="29dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="125dp"
            android:text="아이디"
            android:textColor="#000000"
            android:textSize="15dp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="91dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="640dp"
            android:layout_marginEnd="91dp"
            android:text="회원가입"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="145dp"
            android:layout_height="64dp"
            android:layout_marginLeft="133dp"
            android:layout_marginTop="35dp"
            android:text="회원가입"
            android:textColor="#000000"
            android:textSize="30dp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />
    </RelativeLayout>


</RelativeLayout>
